<resources>
    <string name="app_name">OCA-Logistica</string>
    <string name="singin">Acceder</string>
    <string name="img">Imagen</string>
    <string name="version">Version 1.0</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="login">Iniciando Sesión…</string>
    <string name="orden">Orden :</string>
    <string name="contrato">Contrato :</string>
    <string name="medidor">Medidor :</string>
    <string name="client">Cliente :</string>
    <string name="direccion">Dirección</string>
    <string name="title_activity_suministro">SuministroActivity</string>
    <string name="punto">.</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="title_activity_maps">Map</string>
    <string name="mapa">Mapa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="tab1">Kilometraje</string>
    <string name="tab2">Combustible</string>
    <string name="tab3">Por Vencer</string>

    <string name="tab1E">General</string>
    <string name="tab2E">Baremos</string>
    <string name="tab3E">Materiales</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="operario">Operario</string>
    <string name="area">Area</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="titulo_de_trabajo">Título de Trabajo</string>
    <string name="lugar">Lugar</string>
    <string name="check_one">Charla Pre Operacional, reconociendo previamente su zona de trabajo. Identificar los peligros y evaluar los riesgos, estableciendo las medidas de control vinculadas.</string>
    <string name="check_two">Revisar que los EPP, herramientas y otros medios de trabajos se encuentren en buen estado de conversación.</string>
    <string name="siguiente">Siguiente</string>
    <string name="observation">Observación</string>
    <string name="descripcion">Descripción</string>
    <string name="save">Guardar</string>
    <string name="observacion">Observación :</string>

    <string name="seleccione_materiales">Seleccione Materiales</string>
    <string name="seleccione_baremo">Seleccione Baremo</string>
    <string name="seleccione_obra">Seleccione Obra | Td</string>

    <string name="title_menu">Menu Principal</string>
    <string name="no">NO</string>
    <string name="na">NA</string>
    <string name="m">M</string>
    <string name="b">B</string>
    <string name="fecha_title">Fecha</string>
    <string name="observacion2">Observación 2</string>
    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>
    <string name="ver">Ver</string>
    <string name="deletePhoto">Eliminar Foto</string>
    <string name="si">SI</string>
    <string name="cancel">Cancelar</string>
    <string name="cantidad_de_lectura">Cantidad de Lectura</string>
    <string name="search">Busqueda</string>
    <string name="c">C:</string>
    <string name="s">S:</string>
    <string name="ok">OK</string>
    <string name="ir_para_adelante_o_atras">Ir para adelante o atras</string>
    <string name="medidor2">Medidor</string>
    <string name="actualizar">actualizar</string>
    <string name="actividad">Actividad</string>
    <string name="try_again">Por favor volver a intentarlo</string>
    <string name="centro_medico">Centro Médico</string>
    <string name="supervisor">Supervisor</string>
    <string name="sucursal">Sucursal</string>
    <string name="peligros_y_o_riesgos">PELIGROS Y/O RIESGOS</string>
    <string name="tarea">Tarea</string>
    <string name="entorno">Entorno</string>
    <string name="clasif_peligro_riesgo">Clasif Peligro / Riesgo</string>
    <string name="prob_ocurrencia">Prob Ocurrencia</string>
    <string name="se_verifico_estado">Se verifico Estado</string>
    <string name="medidas_de_control">Medidas de Control</string>
    <string name="ubicacion">Ubicación</string>
    <string name="persona">Persona</string>
    <string name="security">En Seguridad</string>
    <string name="salud">En Salud Ocupacional</string>
    <string name="ir">Ir</string>
    <string name="cargando">Cargando…</string>
    <string name="ta">TA</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">header_title</string>
    <string name="nav_header_subtitle">sub_title</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="envio_de_pendientes">Enviar Pendientes</string>
    <string name="vehiculos">Vehiculos</string>
    <string name="reparacion">Reparación Veredas</string>
    <string name="work">Trabajos SS</string>
    <string name="imagen">Imagen</string>
    <string name="agregar_kilometraje">Agregar Kilometraje</string>
    <string name="km">km</string>
    <string name="km_salida">Salida :</string>
    <string name="km_entrada">Entrada :</string>
    <string name="texto">texto</string>
    <string name="ingrese_kilometraje">Ingrese el Kilometraje</string>
    <string name="texto_envio2">Envios de Reparación y Trabajos</string>
    <string name="texto_envio1">Enviar Vehiculos</string>
    <string name="close">Cerrar</string>
    <string name="ancho">Ancho</string>
    <string name="m2">M2</string>
    <string name="obra">Obra</string>
    <string name="n_poste">N° Poste</string>
    <string name="adicionar_puntos_antes_off_despues_on">Adicionar Puntos Antes (Off) | Despues (On)</string>
    <string name="nombre_del_punto">Nombre del Punto</string>
    <string name="largo">Largo</string>
    <string name="estado">Seleccione Estado</string>

    <string name="validate_work">Seleccione una Obra</string>
    <string name="validate_observation">Ingrese una Observación</string>
    <string name="instalado">INSTALADO</string>
    <string name="recupero">RECUPERO</string>

    <string name="datosGenerales">Datos Generales</string>
    <string name="nroObra">Obra/TD</string>
    <string name="descripcionObra">Descripción de la Obra</string>
    <string name="observacionObra">Ingrese Observaciones de la Solicitud</string>
    <string name="fechaAsignado">Fecha asignado</string>
    <string name="material">Material</string>
    <string name="descriptionMaterial">Descripcion del Material</string>
    <string name="um">UM</string>
    <string name="stock">Stock</string>
    <string name="countItem">Cantidad</string>
    <string name="generateRequest">Generar Solicitud</string>
    <string name="send">Enviar a Aprobar</string>
    <string name="personalID">DNI Personal</string>
    <string name="personalLastName">Apellidos y Nombres</string>
    <string name="takePhoto">Tomar Foto</string>
    <string name="centerCost">Centro Costos</string>
    <string name="descriptionCost">Descripción del Centro Costos</string>
    <string name="resumen">Resumen</string>
    <string name="parte_diario">Parte Diario</string>
    <string name="info">Info</string>
    <string name="registrar">Registrar</string>
    <string name="title">Titulo</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="solicitud_entrada">Solicitud Devolucion</string>
    <string name="solicitud_salida">Solicitud Salida</string>
    <string name="zonal_sucursal">Zonal / Sucursal</string>
    <string name="servicio">Servicio</string>
    <string name="nro_ficha">Nro Ficha</string>
    <string name="seleccione_coordinador">Seleccione Coordinador</string>
    <string name="camera">Camara</string>
    <string name="eraser">Borrador</string>
    <string name="almacen">Almacen</string>
    <string name="salir">Salir</string>
    <string name="name">Irvin Joao Gongora Hernandez</string>
    <string name="dni">70401291</string>
    <string name="seleccione_marca">Seleccione Marca</string>
    <string name="seleccion_actividad">Seleccione Actividad</string>
    <string name="abreviatura">abreviatura</string>
    <string name="guia_salida">guia salida</string>
    <string name="nro_solicitud">Nro Solicitud</string>
    <string name="tipo_devolucion">Tipo Devolución</string>
    <string name="nro_parte_diario">Nro Parte Diario</string>
    <string name="nroficha">NroFicha</string>
    <string name="seleccione_medidor">Seleccione Medidor</string>
    <string name="marcar_el_check_si_el_medidor_es_manual">Marcar el check si el medidor es manual</string>
    <string name="ingresar_medidor_manual">Ingresar medidor manual</string>
    <string name="nro_serie">Nro Serie</string>

    <string name="tab1e">General</string>
    <string name="tab2e">Baremos</string>
    <string name="tab3e">Materiales</string>
    <string name="tab4">Fotos</string>
    <string name="tab5">Firma</string>
    <string name="filtro">Filtro</string>
    <string name="buscar">Buscar</string>
    <string name="todo">imagen</string>
    <string name="centro">Centro de Costo</string>
    <string name="cuadrilla">Cuadrilla</string>
    <string name="detalle_de_baremos">Detalle de Baremos</string>
    <string name="n_parte_diario">N° Parte Diario</string>
    <string name="title_Obra">N° Obra / td</string>
    <string name="ingresar_cantidad">Ingresar cantidad</string>
    <string name="materiales">Materiales</string>

    <string name="changePhoto">Cambiar Foto</string>
    <string name="enviar">Enviar</string>
    <string name="ingresar">Ingresar</string>

    <string name="hello_blank_fragment2">Materiales</string>
    <string name="detalle">Detalle</string>
    <string name="anular">Anular</string>
    <string name="nuevo">Nuevo</string>
    <string name="tipo_material">Seleccione tipo de Material</string>
    <string name="obra_td">Obra/Td</string>
    <string name="cliente">Cliente</string>
    <string name="numero_parte_diario">Numero Parte Diario</string>
    <string name="lista_de_p_d">Lista de P.D</string>
    <string name="suministro">Suministro</string>
    <string name="sed">SED</string>
    <string name="sync">Sincronizar</string>
    <string name="n_solicitud">Número de Solicitud</string>
    <string name="seleccione_personal">Seleccione Personal</string>
    <string name="generar">Generar</string>


    <string name="aprobation1">Aprobación de Pedidos de Compra</string>
    <string name="aprobation2">Aprobación de Orden de Compra</string>
    <string name="aprobation3">Anular Ordenes de Compra</string>
    <string name="aprobation4">Aprobadar Solicitud de Salida de Material de Campo por Jefe</string>
    <string name="aprobation5">Aprobacion de Solicitudes de Campo por Tiempo de Vida</string>
    <string name="update">Actualizar</string>
</resources>