<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/parte_diario">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/reparacion"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/reparacion" />
                <item
                    android:id="@+id/trabajo"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/work" />
                <item
                    android:id="@+id/envio"
                    android:icon="@drawable/ic_menu"
                    android:title="@string/envio_de_pendientes" />
            </group>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/logout" />
        </menu>
    </item>
</menu>